--- a/index.html
+++ b/index.html
@@ -5,37 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge - DOM</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <div id="app">
       <!-- TODO: Buatlah sebuah header dengan id todo-title -->
+      <header id="todo-title">To-DO-List</header>
       <!-- TODO: Buatlah sebuah subtitle dengan id todo-subtitle -->
+      <figcaption id="todo-subtitle">-Today I need to-</figcaption>
 
       <!-- Section: input -->
       <!-- TODO: Buatlah sebuah input bertipe text dengan id todo-input -->
       <!-- TODO: Buatlah sebuah button dengan id todo-submit -->
+      <input type="text" id="todo-input"/>
+      <button id="todo-submit" onclick="clicked()">Submit</button>
 
       <!-- Section output -->
       <!-- TODO: Buatlah sebuah <ul> dengan id todo-output -->
+        <ul id="todo-output"></ul>
     </div>
 
     <!-- ! Untuk tantangan ini, script jangan diubah ke external js yah ! -->
     <script>
       // TODO: Deklarasi variable sesuai dengan kebutuhan di sini
-      let button;
-      let input;
-      let output;
+      let button = document.getElementById("todo-submit")
+      let input = document.getElementById("todo-input")
+      let output = document.getElementById("todo-output")
 
       // TODO: Buatlah sebuah fungsi dengan nama fnClickHandler
       // Fungsi yang digunakan untuk menambahkan tulisan
       // Jangan ubah cara deklarasi fungsinya, cukup isi saja
-      function fnClickHandler(toDoItem) {}
+      function fnClickHandler(toDoItem) {
+        let list = document.createElement('li')
+        list.textContent = toDoItem
+        output.appendChild(list)
+      }
 
       // TODO: register event onclick / addEventListener untuk button
       // akan menjalankan fungsi fnClickHandler
+      function clicked () {
+        fnClickHandler(input.value)
+        input.value = ""
+      }
       
       // TODO: register event onkeypress / addEventListener untuk input
       // sehingga saat di input ditekan enter akan menjalankan fungsi fnClickHandler juga
+      input.addEventListener('keypress', (KeyboardEvent)=> {
+        if(KeyboardEvent.key === "Enter"){
+          KeyboardEvent.preventDefault()
+          clicked()
+        }
+      })
     </script>
   </body>
 </html>
